# tools

./: .gitignore  CMakeLists.txt  LICENSE  README.md  shell.nix
.github/workflows/: test.yml
src/: CMakeLists.txt  command.cpp  command.h  crypto.cpp  crypto.h  exceptions.h  io.cpp  io.h  networking.cpp  networking.h  security.cpp  security.h  util.cpp  util.h
test/: main.cpp
